--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,94 +1,52 @@
-body {
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #1a1a1a;
-    background-color: #599e4b;
+*{
+	font-family: cursive;
 }
-
-
-/** HEADER **/
-
-#header-nav {
-    background-color: #c98715;
-    border-radius: 0;
-    border: 0;
+h1{
+  text-align: center;
 }
-
-#header-nav button {
-    margin-top: 22px;
+div{
+	float: left;
+	padding: 10px;
+	box-sizing: border-box;
 }
-
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #fce29e;
+section{
+	border: 1px solid black;
+	background-color: gray;
 }
-
-.navbar-collapse {
-    border-top: 0;
+#label1{
+	float: right;
+	margin: 0;
+	background-color: pink;
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
+	padding-bottom: 5px;
+	padding-right: 40px;
+	padding-left: 40px;
 }
-
-.navbar-brand, .navbar-nav li a {
-    line-height: 76px;
-    height: 76px;
-    padding-top: 0;
+#label2{
+	float: right;
+	margin: 0;
+	background-color: red;
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
+	padding-bottom: 5px;
+	padding-right: 40px;
+	padding-left: 40px;
+	color: white;
 }
-
-.navbar-brand h1 {
-    color: #7d1913;
-    font-family: 'Abril Fatface', cursive;
-    font-weight: bolder;
-    font-size: 1.8em;
+#label3{
+	float: right;
+	margin: 0;
+	background-color: yellow;
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
+	padding-bottom: 5px;
+	padding-right: 40px;
+	padding-left: 40px;
 }
-
-.navbar-brand a:hover {
-    text-decoration: none;
-    text-shadow: 1px 1px 1px #fe9797;
-}
-
-#nav-list {
-    background-color: #e4af34;
-}
-
-#nav-list a {
-    font-weight: bolder;
-    color: #282828;
-    font-size: 1.2em;
-}
-
-#nav-list a:hover {
-    color: #202020;
-    background-color: #fce29e;
-}
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #7d1913;
-}
-
-
-/** END HEADER */
-
-
-/** HOME PAGE **/
-
-#main-content {
-    width: 92%;
-    margin-bottom: 40px;
-}
-
-#main-content h2 {
-    font-size: 2.9em;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-
-#main-content h3 {
-    font-size: 1.6em;
-    font-weight: bold;
-    margin-bottom: 1em;
-}
-
-#main-section {
-    background-color: #82d06b;
-    box-shadow: 0 0 50px #0f5900;
-    padding: 30px;
+p{
+	padding-right: 15px;
+	padding-left: 15px;
+	padding-top: 20px;
+	padding-bottom: 0;
 }
