--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,52 +1,28 @@
-*{
-	font-family: cursive;
+.container-fluid{
+	background-color: silver;
+    
 }
-h1{
-  text-align: center;
+.text-center{
+    font-size: 32px;
+    font-weight: bold;
 }
-div{
-	float: left;
-	padding: 10px;
-	box-sizing: border-box;
+#heading{
+    font-size: 28px;
 }
-section{
-	border: 1px solid black;
-	background-color: gray;
+#menu
+{
+    background-color: silver;
+    height: 1000px;
+    font-family: arial;
+    font-size: 1.2em;
 }
-#label1{
-	float: right;
-	margin: 0;
-	background-color: pink;
-	border-left: 1px solid black;
-	border-bottom: 1px solid black;
-	padding-bottom: 5px;
-	padding-right: 40px;
-	padding-left: 40px;
-}
-#label2{
-	float: right;
-	margin: 0;
-	background-color: red;
-	border-left: 1px solid black;
-	border-bottom: 1px solid black;
-	padding-bottom: 5px;
-	padding-right: 40px;
-	padding-left: 40px;
-	color: white;
-}
-#label3{
-	float: right;
-	margin: 0;
-	background-color: yellow;
-	border-left: 1px solid black;
-	border-bottom: 1px solid black;
-	padding-bottom: 5px;
-	padding-right: 40px;
-	padding-left: 40px;
-}
-p{
-	padding-right: 15px;
-	padding-left: 15px;
-	padding-top: 20px;
-	padding-bottom: 0;
+
+@media (max-width:768px)
+{
+    #menu#heading p{
+        margin-left: 50px;
+        margin-right: 50px;
+        
+    }
+    
 }
